--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<section id="colorlib-hero" class="js-fullheight" data-section="home">
 					<div class="flexslider js-fullheight">
 						<ul class="slides">
-							<li style="background-image: url(images/img_bg_1.jpg);">
+							<li style="background-image: url(images/1625203070443.jpg);">
 								<div class="overlay"></div>
 								<div class="container-fluid">
 									<div class="row">
@@ -126,10 +126,10 @@
 											class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 											<div class="slider-text-inner js-fullheight">
 												<div class="desc">
-													<h1>Hi! <br>I'm Mike</h1>
-													<h2>Do you want to know me?</a></h2>
-													<p><a href="https://drive.google.com/file/d/1XnZ4N_lTrd5TkR6oVGmC22TmnYFK_qVx/view?usp=sharing"
-															class="btn btn-primary btn-learn">Download CV <i
+													<h1 style="color: white;">Hi! <br>I'm Mike</h1>
+													<h2 style="color: white;">Do you want to know me?</a></h2>
+													<p style="color: white;"><a style="color: white;" href="https://drive.google.com/file/d/1O6RmVxLGIVltXY_uEvR-moQ7ayNt9Hsh/view?usp=sharing"
+															class="btn btn-default btn-learn">Download CV <i
 																class="icon-download4"></i></a></p>
 												</div>
 											</div>
@@ -137,7 +137,7 @@
 									</div>
 								</div>
 							</li>
-							<li style="background-image: url(images/img_bg_2.jpg);">
+							<li style="background-image: url(images/IMG_20210428_133454-removebg-preview.png); padding-top: 100px;">
 								<div class="overlay"></div>
 								<div class="container-fluid">
 									<div class="row">
@@ -147,7 +147,7 @@
 												<div class="desc">
 													<h1>I am <br>a Web Developer</h1>
 													<h2>Let's study about me.</h2>
-													<p><a href="https://drive.google.com/file/d/1XnZ4N_lTrd5TkR6oVGmC22TmnYFK_qVx/view?usp=sharing"
+													<p><a href="https://drive.google.com/file/d/1O6RmVxLGIVltXY_uEvR-moQ7ayNt9Hsh/view?usp=sharing"
 															class="btn btn-primary btn-learn">View Portfolio <i
 																class="icon-briefcase3"></i></a></p>
 												</div>
@@ -536,8 +536,8 @@
 											</div>
 
 											<div class="timeline-label">
-												<h2><a href="#">Full Stack Developer</a> <span
-														style="color: #2e2d2d;">2019-2020</span></h2>
+												<h2><a href="#">Revel Soft Ltd.</a> <span
+														style="color: #2e2d2d;">Oct 2019 – Jun 2020.</span></h2>
 												<p>I used to work at a company revelsoft as a web developer. I got a job
 													for Develop a website for a somboon printing company and Website
 													development ERP System used in organizations.</p>
@@ -552,24 +552,24 @@
 												<i class="icon-pen2"></i>
 											</div>
 											<div class="timeline-label">
-												<h2><a href="#">Front End Developer at Revelsoft</a> <span
-														style="color: #2e2d2d;">2019-2020</span></h2>
-												<p>Work on the part of the front-end to somboon printing company.</p>
+												<h2><a href="#">Skyfrog</a> <span
+														style="color: #2e2d2d;">Aug 2020 – Dec 2020.</span></h2>
+												<p>Develop a website for a skyflog company and Website development Transport Management Solution (TMS) System used in organizations for Customer.</p>
 											</div>
 										</div>
 									</article>
 
-									<!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+									<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-3">
 					                  <i class="icon-pen2"></i>
 					               </div>
 					               <div class="timeline-label">
-					               	<h2><a href="#">System Analyst</a> <span style="color: #2e2d2d;">2017-2018</span></h2>
-					                  <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+					               	<h2><a href="#">Thanachart Insurance</a> <span style="color: #2e2d2d;">Jan 2021 –  Jun 2021.</span></h2>
+					                  <p>Develop a Software for a Thanachart Insurance company and Software development Plannet Press used in organizations.</p>
 					               </div>
 					            </div>
-					         </article> -->
+					         </article>
 
 									<!-- <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
 					            <div class="timeline-entry-inner">
@@ -660,7 +660,7 @@
 													document.getElementById("demo").addEventListener("click", myFunction);
 
 													function myFunction() {
-														document.getElementById("demo").innerHTML = "<i class='icon-heart'>" + "</i>" + " 50";
+														document.getElementById("demo").innerHTML = "<i style='color:red;' class='icon-heart'>" + "</i>" + " 50";
 													}
 												</script>
 											</p>
@@ -691,7 +691,7 @@
 													document.getElementById("demo1").addEventListener("click", myFunction);
 
 													function myFunction() {
-														document.getElementById("demo1").innerHTML = "<i class='icon-heart'>" + "</i>" + " 36";
+														document.getElementById("demo1").innerHTML = "<i style='color:red;' class='icon-heart'>" + "</i>" + " 36";
 													}
 												</script>
 											</p>
@@ -722,7 +722,7 @@
 													document.getElementById("demo2").addEventListener("click", myFunction);
 
 													function myFunction() {
-														document.getElementById("demo2").innerHTML = "<i class='icon-heart'>" + "</i>" + " 88";
+														document.getElementById("demo2").innerHTML = "<i style='color:red;' class='icon-heart'>" + "</i>" + " 88";
 													}
 												</script>
 											</p>
@@ -753,7 +753,7 @@
 													document.getElementById("demo3").addEventListener("click", myFunction);
 
 													function myFunction() {
-														document.getElementById("demo3").innerHTML = "<i class='icon-heart'>" + "</i>" + " 101";
+														document.getElementById("demo3").innerHTML = "<i style='color:red;' class='icon-heart'>" + "</i>" + " 101";
 													}
 												</script>
 											</p>
@@ -784,7 +784,7 @@
 													document.getElementById("demo4").addEventListener("click", myFunction);
 
 													function myFunction() {
-														document.getElementById("demo4").innerHTML = "<i class='icon-heart'>" + "</i>" + " 43";
+														document.getElementById("demo4").innerHTML = "<i style='color:red; 'class='icon-heart'>" + "</i>" + " 43";
 													}
 												</script>
 											</p>
@@ -796,8 +796,8 @@
 								<div class="project" style="background-image: url(images/img-6.jpg);">
 									<div class="desc">
 										<div class="con">
-											<h3><a href="#" target="_blank">Work 06</a></h3>
-											<span>Web Design</span>
+											<h3><a href="#" target="_blank">Plannet Press</a></h3>
+											<span>Software</span>
 											<p class="icon">
 												<span><a target="_blank"
 														href="https://www.facebook.com/sharer/sharer.php?u=https://mild2540mike.github.io/yanaranop.github.io/&amp;src=sdkpreparse"
@@ -815,7 +815,7 @@
 													document.getElementById("pus-heart").addEventListener("click", myFunction);
 
 													function myFunction() {
-														document.getElementById("pus-heart").innerHTML = "<i class='icon-heart'>" + "</i>" + " 215";
+														document.getElementById("pus-heart").innerHTML = "<i style='color:red;' class='icon-heart'>" + "</i>" + " 215";
 													}
 												</script>
 											</p>
